# cmd/am2server/openapi.yml
@@ -111,6 +111,150 @@ paths:
           summary: GetCaptureFile
           tags:
               - capture
+  /users/{id}/kick:
+      patch:
+          parameters:
+              - in: path
+                name: id
+                schema:
+                  format: int64
+                  type: integer
+          requestBody:
+              content:
+                  application/json:
+                      schema:
+                          properties: null
+                          type: object
+                  application/x-www-form-urlencoded:
+                      schema:
+                          properties: null
+                          type: object
+          responses:
+              "200":
+                  content:
+                      application/json:
+                          schema:
+                              properties:
+                                  last_insert_id:
+                                      format: int64
+                                      type: integer
+                                  rows_affected:
+                                      format: int64
+                                      type: integer
+                              type: object
+                  description: OK
+              default:
+                  content:
+                      text/plain:
+                          schema:
+                              type: string
+                  description: Error message
+          summary: KickUser
+          tags:
+              - user
+  /users/{id}/pass:
+      patch:
+          parameters:
+              - in: path
+                name: id
+                schema:
+                  format: int64
+                  type: integer
+          requestBody:
+              content:
+                  application/json:
+                      schema:
+                          properties:
+                              pass:
+                                  type: string
+                          type: object
+                  application/x-www-form-urlencoded:
+                      schema:
+                          properties:
+                              pass:
+                                  type: string
+                          type: object
+          responses:
+              "200":
+                  content:
+                      application/json:
+                          schema:
+                              properties:
+                                  last_insert_id:
+                                      format: int64
+                                      type: integer
+                                  rows_affected:
+                                      format: int64
+                                      type: integer
+                              type: object
+                  description: OK
+              default:
+                  content:
+                      text/plain:
+                          schema:
+                              type: string
+                  description: Error message
+          summary: SetUserPassword
+          tags:
+              - user
+  /users/{id}/token/{pass}:
+      get:
+          parameters:
+              - in: path
+                name: id
+                schema:
+                  format: int64
+                  type: integer
+              - in: path
+                name: pass
+                schema:
+                  type: string
+          responses:
+              "200":
+                  content:
+                      application/json:
+                          schema:
+                              properties:
+                                  last_insert_id:
+                                      format: int64
+                                      type: integer
+                                  rows_affected:
+                                      format: int64
+                                      type: integer
+                              type: object
+                  description: OK
+              default:
+                  content:
+                      text/plain:
+                          schema:
+                              type: string
+                  description: Error message
+          summary: ValidateUserEmail
+          tags:
+              - user
+  /users/by-email:
+      get:
+          parameters:
+              - in: query
+                name: email
+                schema:
+                  type: string
+          responses:
+              "200":
+                  content:
+                      application/json:
+                          schema:
+                              $ref: '#/components/schemas/userUser'
+                  description: OK
+              default:
+                  content:
+                      text/plain:
+                          schema:
+                              type: string
+                  description: Error message
+          summary: GetUserByEmail
+          tags:
+              - user
   
   /captures:
     get:
@@ -325,11 +469,9 @@ paths:
             schema:
               type: object
               properties:
-                login:
+                name:
                   type: string
                 email:
-                  type: string
-                pass:
                   type: string
                 status:
                   type: string
@@ -337,11 +479,9 @@ paths:
             schema:
               type: object
               properties:
-                login:
+                name:
                   type: string
                 email:
-                  type: string
-                pass:
                   type: string
                 status:
                   type: string
@@ -360,6 +500,32 @@ paths:
                   rows_affected:
                     type: integer
                     format: int64
+          
+        "default":    
+          description: Error message
+          content:
+            text/plain:
+              schema:
+                type: string  
+    get:
+      summary: GetUserByEmail
+      tags:
+          - user
+      
+      
+      parameters:
+        - name: email
+          in: query
+          schema:
+            type: string
+      
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/userUser"
           
         "default":    
           description: Error message
@@ -411,130 +577,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/userUser"
-          
-        "default":    
-          description: Error message
-          content:
-            text/plain:
-              schema:
-                type: string  
-    delete:
-      summary: RemoveUser
-      tags:
-          - user
-      
-      
-      parameters:
-        - name: id
-          in: path
-          schema:
-            type: integer
-            format: int64
-      
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  last_insert_id:
-                    type: integer
-                    format: int64
-                  rows_affected:
-                    type: integer
-                    format: int64
-          
-        "default":    
-          description: Error message
-          content:
-            text/plain:
-              schema:
-                type: string  
-    
-  /users/{id}/pass:
-    patch:
-      summary: SetUserPassword
-      tags:
-          - user
-      
-      
-      parameters:
-        - name: id
-          in: path
-          schema:
-            type: integer
-            format: int64
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                pass:
-                  type: string
-          application/x-www-form-urlencoded:
-            schema:
-              type: object
-              properties:
-                pass:
-                  type: string
-      
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  last_insert_id:
-                    type: integer
-                    format: int64
-                  rows_affected:
-                    type: integer
-                    format: int64
-          
-        "default":    
-          description: Error message
-          content:
-            text/plain:
-              schema:
-                type: string  
-    
-  /users/{id}/token/{pass}:
-    get:
-      summary: ValidateUserEmail
-      tags:
-          - user
-      
-      
-      parameters:
-        - name: id
-          in: path
-          schema:
-            type: integer
-            format: int64
-        - name: pass
-          in: path
-          schema:
-            type: string
-      
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  last_insert_id:
-                    type: integer
-                    format: int64
-                  rows_affected:
-                    type: integer
-                    format: int64
           
         "default":    
           description: Error message
@@ -645,11 +687,9 @@ components:
         id:
           type: integer
           format: int64
-        login:
-          type: string
         email:
           type: string
-        pass:
+        name:
           type: string
         status:
           type: string
